force-app/main/default/objects/nort_Exclusion__mdt/nort_Exclusion__mdt.object-meta.xml
<CustomObject>
    <label>Nort Exclusion</label>
    <pluralLabel>Nort Exclusions</pluralLabel>
</CustomObject>