force-app/main/default/objects/nort_Exclusion__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Whether this exclusion rule is enforced. Lets an admin disable a rule without deleting it.</description>
    <inlineHelpText>Uncheck to temporarily disable this exclusion rule.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>