force-app/main/default/objects/nort_Exclusion__mdt/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <label>Match Type</label>
    <description>How Match Value is compared to the failing class: a leading-prefix match, a namespace match, or an exact class-name match.</description>
    <inlineHelpText>How to compare the match value to the failing class.</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ClassPrefix</fullName>
                <default>true</default>
                <label>Class Prefix</label>
            </value>
            <value>
                <fullName>Namespace</fullName>
            </value>
            <value>
                <fullName>ExactClass</fullName>
                <label>Exact Class</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>