force-app/main/default/objects/nort_Exclusion__mdt/fields/Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Value__c</fullName>
    <label>Match Value</label>
    <description>The class-name prefix, namespace, or exact class name to exclude from ingestion. The self-exclusion loop guard: prevents this solution's own errors (and other noise) from feeding back into the pipeline.</description>
    <inlineHelpText>The value to match against the failing class (e.g. the prefix "Nort").</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>